--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,24 @@
 body {
-    color: deeppink;
+    color: black;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
 
 }
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #000;
+    margin: 0 auto;
+  }
+#containder h1
+ {
+     font-size: 20px;
+ }
+
+
+ 
+  
