--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,13 +3,30 @@ body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+}
 
+#cabecera
+{
+    background-color: blue;
+    box-shadow: 0px 2px 30px 0px rgba(0,0,0,0.5);
+    color: white;
+    margin: 0;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 0.5em;
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
 }
 
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #000;
     margin: 0 auto;
